vlib/v/checker/tests/in_range_expr_err.vv
assert true in 0..1
